# phoenix-Chimera

./: .gitattributes  .gitignore  ALL_57_ENGINES_STATUS.md  ALL_57_ENGINES_VERIFIED.md  ARCHITECTURE_ASSESSMENT.md  ARCHITECTURE_DIAGRAM.md  AUDIT_ACTION_SUMMARY.md  AUDIT_REPORT_2025_08_18.md  AUTHORITATIVE_ENGINE_TEST.cpp  AUTHORITATIVE_SYSTEMS.md  AUTHORITATIVE_TEST_COMPILATION.md  Ambience_Primitive_DSP_Report.md  AutonomousEngineAnalyzer.cpp  BETA_STATUS.md  BETA_STRATEGIC_PLAN.md  BUILD_TEST_RESULTS.md  CHANGELOG.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CLEANUP_SUMMARY.md  CODEBASE_GHOST_INVENTORY.md  COMPLETE_PROJECT_ANALYSIS.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_ENGINE_ANALYSIS.md  COMPREHENSIVE_ENGINE_TEST_RESULTS.md  COMPREHENSIVE_ENGINE_TEST_SUITE_DESIGN.md  COMPREHENSIVE_TEST_RESULTS.md  COMPREHENSIVE_TEST_STRATEGY.md  CRITICAL_DATABASE_SYNC_REPORT.md  CRITICAL_ISSUES_FIX_PLAN.md  DEEP_DIVE_COMPREHENSIVE_ANALYSIS.md  DEFINITIVE_ANSWER.md  DELETED_TESTS.md  DENORMAL_SAFETY_AUDIT_REPORT.md  DEVELOPMENT_BRANCHES.md  DSP_ALGORITHM_QUALITY_REPORT.md  DSP_ARTIFACT_ELIMINATION_GUIDE.md  DSP_DISTORTION_RESEARCH_REPORT.md  DSP_DYNAMICS_RESEARCH_REPORT.md  DSP_FILTER_RESEARCH_REPORT.md  DSP_MODULATION_EFFECTS_RESEARCH_REPORT.md  (+468 more)
JUCE_Plugin/: .gitignore  CMakeLists.txt  COMPREHENSIVE_TEST_HARNESS_README.md  ChimeraPhoenix.jucer  ChimeraPhoenix_Pi.jucer  DEFAULT_PARAMETER_ANALYSIS.md  DOCUMENTATION_SYNC_CONSISTENCY_REPORT.md  DirectEngineTest.cpp  ENGINE_ID_MAPPING_FIX_SUMMARY.md  ENGINE_STATUS_SUMMARY.md  ENGINE_SYSTEM_SOURCES_OF_TRUTH.md  FINAL_PARAMETER_MAPPING_DIAGNOSTIC_REPORT.md  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_PLAN.md  Makefile.audiotest  Makefile.comprehensive_transient_test  Makefile.parameter_validator  Makefile.simple_validation  Makefile.vocoder_test  OBSOLETE_CODE_BACKUP.md  PUSH_IN_4_PARTS.md  PUSH_TO_GITHUB.md  QualityTestingGuide.md  README.md  SLOT_ARCHITECTURE.md  SpectralFreeze_Fix_Report.md  TestUnifiedDefaults.cpp  UNIFIED_DEFAULT_PARAMETERS_API_DOCUMENTATION.md  UTILITY_ENGINES_ADDED.md  build_and_test_engines.sh  compile_new_engines.sh  comprehensive_engine_diagnostic.cpp  comprehensive_spectral_freeze_test.cpp  final_validation_test  final_validation_test.cpp  generate_corpus  parameter_audit.py  parameter_debug_test.cpp  parameter_mapping_analysis_report.md  parameter_mapping_validation_results.md  (+24 more)
JUCE_Plugin/.claude/agents/: system-architect.md
JUCE_Plugin/GoldenCorpus/: all_presets.json  analysis_results.json  analyze_corpus.py
JUCE_Plugin/GoldenCorpus/faiss_index/: corpus.index
JUCE_Plugin/GoldenCorpus/presets/: GC_004.json  GC_006.json  GC_009.json  GC_010.json  GC_011.json  GC_013.json  GC_014.json  GC_015.json  GC_016.json  GC_019.json  GC_021.json  GC_024.json  GC_025.json  GC_027.json  GC_028.json
JUCE_Plugin/GoldenCorpus_v3/faiss_index/: corpus.index  corpus_clean.index  metadata.json  presets.json  presets_clean.json
JUCE_Plugin/GoldenCorpus_v3/presets/: GC_0001.json  GC_0002.json  GC_0003.json  GC_0005.json  GC_0007.json  GC_0010.json  GC_0011.json  GC_0014.json  GC_0016.json  GC_0022.json  GC_0024.json  GC_0027.json  GC_0029.json  GC_0030.json  GC_0035.json  GC_0036.json  GC_0039.json  GC_0040.json  GC_0043.json  GC_0047.json  GC_0051.json  GC_0052.json  GC_0053.json  GC_0055.json  (+48 more)
JUCE_Plugin/Python/: export_presets_from_cpp.py  oracle_service.py
JUCE_Plugin/Resources/: parameters.json
JUCE_Plugin/Source/: AIServerClient.cpp  AdvancedSpringDispersion.h  AnalogPhaser.cpp  AnalogPhaser.h  AnalogRingModulator.cpp  AnalogRingModulator.h  ArtisticLookAndFeel.cpp  AudioMeasurements.cpp  BUILD_ENGINE_TESTS.md  BitCrusher.cpp  BitCrusher_Basic.cpp  BitCrusher_Basic.h  BitCrusher_Original.cpp  BitCrusher_Original.h  BitCrusher_Simple.cpp  BitCrusher_Simple.h  BitCrusher_Studio.cpp  BitCrusher_Studio.h  BoutiquePresetGenerator.cpp  BucketBrigadeDelay.cpp  BucketBrigadeDelay.h  BucketBrigadeDelay_Fixed.cpp  BucketBrigadeDelay_Original.cpp  BufferRepeat.cpp  BufferRepeat.h  BufferRepeat_Platinum.cpp  BufferRepeat_Platinum.h  BypassEngine.h  CHANNEL_COUNT_FIX_REPORT.md  COMPLETE_ENGINE_AUDIT_REPORT.md  CONSOLE_EQ_METHODOLOGY.md  CONSOLIDATION_REPORT.md  CRITICAL_ENGINE_ISSUES_FOUND.md  CRITICAL_MIX_PARAMETER_AUDIT.md  ChaosGenerator.cpp  ChaosGenerator.h  ChaosGenerator_Complex.cpp  ChaosGenerator_Platinum.cpp  ChaosGenerator_Platinum.h  ChimeraSlotComponent.cpp  (+337 more)
JUCE_Plugin/Tests/: BitCrusher_SimpleTest.cpp  EngineBaseTest.h  MinimalEngineTest.cpp  RotarySpeakerTest.cpp  include_juce_audio_basics.mm  include_juce_audio_devices.mm  include_juce_audio_formats.mm  include_juce_audio_processors.mm  include_juce_audio_utils.mm  include_juce_core.mm  include_juce_graphics.mm  include_juce_gui_basics.mm
JUCE_Plugin/Tools/: SimplePresetExporter.cpp  add_reset_to_engines.py  export_presets.py  migrate_parameters.py
pi_deployment/JUCE_Plugin/: .gitignore  CMakeLists.txt  COMPLETE_ENGINE_DOCUMENTATION.md  ChimeraPhoenix.jucer  DEFAULT_PARAMETER_CLEANUP_REPORT.md  DEFAULT_PARAMETER_METHODOLOGY.md  DefaultParameterSystemGuide.txt  EngineTestHarness.cpp  FINAL_SYSTEM_VALIDATION_REPORT.md  FIXES_APPLIED.md  Makefile.final_validation  PHASE_ALIGN_VERIFICATION_REPORT.md  PRODUCTION_READINESS_CERTIFICATION.md  SECONDARY_INTEGRATION_REPORT.md  SYSTEM_ARCHITECTURE.md  SpectralGate_Verification_Report.md  UNIFIED_DEFAULT_PARAMETERS_MIGRATION_GUIDE.md  UNIFIED_DEFAULT_PARAMETERS_SUMMARY.md  UTILITY_ENGINES_FIX_REPORT.md  ValidationReport_GoldenCorpus.md  build_and_test.sh  build_engine_test.sh  build_test.sh  calculate_expected_gain  calculate_expected_gain.cpp  comprehensive_spectral_freeze_test  parameter_mapping_analyzer.py  parameter_mapping_validation_test.py  parameter_mapping_validator.cpp  phase_align_verification_test.cpp  run_diagnostic  simple_engine_test.cpp  simple_final_validation.cpp  simple_validation_report.txt  test_chaos_generator_fix.cpp  test_engine_isolation.cpp  test_engine_simple.cpp  test_parameter_flow.cpp  test_spectral_freeze.cpp  test_tape_echo_safety.sh  (+3 more)
standalone_test/build_audio_quality/: CMakeLists.txt
(+1855 files in other folders)
